--- a/src/view/MainPPFrame.form
+++ b/src/view/MainPPFrame.form
@@ -39,24 +39,16 @@
                           <Group type="102" attributes="0">
                               <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="pandaProdLabelNbTweet" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="pandaProdLabelFriends" min="-2" max="-2" attributes="0"/>
-                                          <Component id="pandaProdButtonTweets" min="-2" pref="50" max="-2" attributes="0"/>
-                                          <Component id="pandaProdLabelFollowers" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="pandaProdLabelLocation" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                              <Component id="pandaProdButtonFriends" alignment="0" pref="50" max="32767" attributes="0"/>
-                                              <Component id="pandaProdButtonFollowers" alignment="0" pref="0" max="32767" attributes="0"/>
-                                          </Group>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="216" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelNbTweet" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelFriends" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdButtonTweets" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelFollowers" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelLocation" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="pandaProdButtonFriends" alignment="0" pref="50" max="32767" attributes="0"/>
+                                      <Component id="pandaProdButtonFollowers" alignment="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <Group type="102" attributes="0">
-                                      <Component id="pandaProdButtonPicture" min="-2" pref="45" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="148" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="pandaProdButtonPicture" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -67,6 +59,7 @@
                               </Group>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="pandaProdLabel10" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
@@ -87,13 +80,18 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
-                          <Component id="pandaProdButtonPicture" min="-2" pref="18" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
+                              <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                              <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="pandaProdButtonPicture" min="-2" pref="60" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                       <Component id="pandaProdLabelNbTweet" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
