--- a/src/view/MainPPFrame.form
+++ b/src/view/MainPPFrame.form
@@ -33,67 +33,114 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="pandaProdLabelWelcome" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="pandaProdLabelWelcome" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="pandaProdLabelNbTweet" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="pandaProdLabelFriends" min="-2" max="-2" attributes="0"/>
                                   <Component id="pandaProdButtonTweets" min="-2" pref="50" max="-2" attributes="0"/>
                                   <Component id="pandaProdLabelFollowers" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="pandaProdLabelLocation" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="pandaProdButtonFriends" alignment="0" pref="50" max="32767" attributes="0"/>
                                       <Component id="pandaProdButtonFollowers" alignment="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <Component id="pandaProdButtonPicture" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelLocation" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelWebSite" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelInscriptionDate" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
-                                  <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pandaProdLabelDescription" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="pandaProdButtonPictureProfil" min="-2" pref="45" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
+                                          <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="pandaProdLabel10" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="jScrollPane2" min="-2" pref="657" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                              <Component id="pandaProdButtonSendTweet" min="-2" pref="77" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="207" max="-2" attributes="0"/>
+                              <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="462" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane1" min="-2" pref="880" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace pref="25" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                                      <Component id="jScrollPane2" min="-2" pref="685" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                      <Component id="pandaProdButtonSendTweet" min="-2" pref="106" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="42" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="jScrollPane1" min="-2" pref="880" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="39" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="268" max="-2" attributes="0"/>
+              <Component id="pandaProdLabel10" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                               <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="pandaProdButtonPicture" min="-2" pref="60" max="-2" attributes="0"/>
+                          <Component id="pandaProdButtonPictureProfil" min="-2" pref="60" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="pandaProdLabelDescription" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="128" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <Component id="pandaProdLabel10" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="pandaProdLabelNbTweet" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="407" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                              <Component id="jScrollPane2" min="-2" pref="105" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                              <Component id="pandaProdButtonSendTweet" min="-2" pref="48" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelNbTweet" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="69" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="pandaProdButtonTweets" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -104,27 +151,17 @@
                       <Component id="pandaProdLabelFollowers" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="pandaProdButtonFollowers" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                       <Component id="pandaProdLabelLocation" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="pandaProdLabelWebSite" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="pandaProdLabelInscriptionDate" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="pandaProdButtonSendTweet" min="-2" pref="48" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Component id="pandaProdLabelWelcome" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="pandaProdLabel10" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="555" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="112" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -138,11 +175,6 @@
     <Component class="view.component.PandaProdLabel" name="pandaProdLabelTwitterName">
       <Properties>
         <Property name="text" type="java.lang.String" value="Nom du comtpe twitter"/>
-      </Properties>
-    </Component>
-    <Component class="view.component.PandaProdLabel" name="pandaProdLabelLocation">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Location"/>
       </Properties>
     </Component>
     <Component class="view.component.PandaProdLabel" name="pandaProdLabelNbTweet">
@@ -204,9 +236,9 @@
         <Property name="text" type="java.lang.String" value="Tweeter"/>
       </Properties>
     </Component>
-    <Component class="view.component.PandaProdButton" name="pandaProdButtonPicture">
+    <Component class="view.component.PandaProdButton" name="pandaProdButtonPictureProfil">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pandaProdButtonPictureActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pandaProdButtonPictureProfilActionPerformed"/>
       </Events>
     </Component>
     <Component class="view.component.PandaProdLabel" name="pandaProdLabelNickname">
@@ -219,6 +251,28 @@
     <Component class="view.component.PandaProdButton" name="pandaProdButtonFollowers">
     </Component>
     <Component class="view.component.PandaProdButton" name="pandaProdButtonFriends">
+    </Component>
+    <Component class="view.component.PandaProdButton" name="pandaProdButtonBackgroundPicture">
+    </Component>
+    <Component class="view.component.PandaProdLabel" name="pandaProdLabelDescription">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="pandaProdLabel1"/>
+      </Properties>
+    </Component>
+    <Component class="view.component.PandaProdLabel" name="pandaProdLabelLocation">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="pandaProdLabel2"/>
+      </Properties>
+    </Component>
+    <Component class="view.component.PandaProdLabel" name="pandaProdLabelWebSite">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="pandaProdLabel3"/>
+      </Properties>
+    </Component>
+    <Component class="view.component.PandaProdLabel" name="pandaProdLabelInscriptionDate">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="pandaProdLabel4"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
