--- a/src/view/ProfilPPFrame.form
+++ b/src/view/ProfilPPFrame.form
@@ -39,59 +39,60 @@
                   <Component id="pandaProdLabelDescription" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="pandaProdLabelTwitterName" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="pandaProdLabelNickname" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="pandaProdButtonPictureProfil" min="-2" pref="217" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="968" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="944" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="168" max="-2" attributes="0"/>
+                      <Component id="pandaProdButtonPictureProfil" min="-2" pref="70" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="456" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="873" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="172" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="171" max="-2" attributes="0"/>
+              <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="pandaProdLabelDescription" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <Component id="pandaProdLabelLocation" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="pandaProdLabelWebSite" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="pandaProdLabelInscriptionDate" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="282" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="186" max="-2" attributes="0"/>
-                  <Component id="pandaProdButtonPictureProfil" min="-2" pref="206" max="-2" attributes="0"/>
-              </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelNickname" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelTwitterName" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelDescription" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelLocation" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelWebSite" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="pandaProdLabelInscriptionDate" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="118" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="jScrollPane1" min="-2" pref="333" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="pandaProdButtonBackgroundPicture" min="-2" pref="158" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="pandaProdButtonPictureProfil" min="-2" pref="62" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="256" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
     <Component class="view.component.PandaProdButton" name="pandaProdButtonBackgroundPicture">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="pandaProdButton2"/>
-      </Properties>
     </Component>
     <Component class="view.component.PandaProdButton" name="pandaProdButtonPictureProfil">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="pandaProdButton1"/>
-      </Properties>
     </Component>
     <Component class="view.component.PandaProdLabel" name="pandaProdLabelNickname">
       <Properties>
